--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = [ "gameserver", "proto", "sdkserver"]
+members = ["common", "gameserver", "proto", "sdkserver", "xtask"]
 resolver = "2"
 
 [workspace.package]
@@ -13,6 +13,8 @@ lazy_static = "1.4.0"
 
 axum = "0.7.4"
 axum-server = "0.6.0"
+tower = "0.4.13"
+tower-http = { version = "0.5.2", features = ["normalize-path"] }
 
 dirs = "5.0.1"
 dotenv = "0.15.0"
@@ -49,6 +51,7 @@ tracing-subscriber = { version = "0.3.18", features = [
 ] }
 tracing-bunyan-formatter = "0.3.9"
 
+common = { path = "common/" }
 proto = { path = "proto/" }
 
 [profile.release]
