--- a/sdkserver/Cargo.toml
+++ b/sdkserver/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+common.workspace = true
+
 anyhow.workspace = true
 env_logger.workspace = true
 
@@ -31,3 +33,5 @@ ansi_term.workspace = true
 prost.workspace = true
 rbase64.workspace = true
 proto.workspace = true
+tower.workspace = true
+tower-http.workspace = true
